k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fikirsepeti-web
  labels:
    app.kubernetes.io/name: fikirsepeti-web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: fikirsepeti-web
  ports:
    - name: http
      port: 3000
      targetPort: http
